# geo-hackathon

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  aircraft-history-report-406bbb.md  docker-compose.yml  setup.sh
.beads/: metadata.json
adsb/: .env.example  README  docker-compose.yml
adsb/elasticsearch/: enrich-policy.json  geo-shapes-world-countries-50m-mapping.json  index-settings-and-mappings.json  index-template.json  ingest-pipeline.json
adsb/logstash/config/: logstash.yml  pipelines.yml
adsb/logstash/pipeline/: adsb_q1.conf  adsb_q2.conf  adsb_q3.conf  adsb_q4.conf
data/: adsb-airlines-defunct-LICENCE.md  adsb-airlines-defunct-data.ndjson
data/scrape-defunct-airlines/: README.md  pyproject.toml  scrape.py
elasticsearch/agents/: README.md  adsb-agent.json  adsb-daily-briefing-agent.json  adsb-hijack-assessment-agent.json
elasticsearch/cases/: observability-config.json
elasticsearch/indices/: adsb-airlines-defunct-mapping.json  adsb-ilm-policy.json  adsb-index-template.json
elasticsearch/kibana/: adsb-saved-objects.ndjson  cockpit-saved-objects.ndjson
elasticsearch/workflows/: README.md  adsb-aircraft-history.yaml  adsb-airport-activity.yaml  adsb-defunct-callsign-detector.yaml  daily-flight-briefing.yaml  hijack-cases-summary.yaml  squawk-7500-create-case.yaml  squawk-7500-enrich.yaml  squawk-7500-hijack-investigation.yaml
logstash/: Dockerfile
logstash/config/: logstash.yml
logstash/pipeline/: adsb_q1.conf  adsb_q2.conf  adsb_q3.conf  adsb_q4.conf  migrate-import.conf
(+1 files in other folders)
